--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,11 @@ jobs:
         run: npm run lint:scss
       - name: Testing unit
         run: npm run test:unit
-      - name: Building project for production
-        run: npm run build:prod
+      - name: Build Storybook
+        run: npm run storybook:build
       - name: Screenshot testing
         run: npm run test:ui:ci
+      - name: Building project for production
+        run: npm run build:prod
+
+
